Unused grids and blocks removed

--- a/src/sass/layout/grids/home-v1.0.scss
+++ b/src/sass/layout/grids/home-v1.0.scss
@@ -1,4 +1,4 @@
-/* grid home-v1.0: this file is for the bespoke grid elements on the homepage using 'new' titling layout
+/* grid home-v1.0: this file is for the bespoke grid elements on the homepage
 ----------------------------------------------------------------------------------------------------- */
 .grid-home {
     padding-top: var(--site-space-lg);
