headers re-factored and streamlined: header-top class removed from all headers, padding-top added to body to accommodate position fixed

--- a/src/sass/layout/layout.scss
+++ b/src/sass/layout/layout.scss
@@ -1,5 +1,9 @@
 /* layout
 ----------------------------------------------------------------------------- */
+#site-wrapper {
+    // styles
+}
+
 .page-top {
     width: 100%;
     max-width: 1296px;
