--- a/src/sass/tools/reset.scss
+++ b/src/sass/tools/reset.scss
@@ -22,18 +22,16 @@ summary {
 }
 
 body {
+    padding-top: 96px;
     font-family: var(--copy);
     background: var(--off-white);
+
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
     &.home {
         background: var(--black);
     }
-}
-
-main {
-    // background: blue;
 }
 
 a {
