--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -82,20 +82,19 @@
     --drop-large: 6rem;
     --drop-big: 10rem;
 
-    /* Breakpoints
-    --------------------------------------------------------------------------------------------------------------- */
-
-    --break-vs: 320px; // old phone
-    --break-small: 480px; // modern phone
-    --break-small-medium: 600px; // modern larger phone
-    --break-medium: 880px; // tablet
-    --break-large: 1120px; // laptop
-    --break-big: 1240px; // desktop
-    --break-vb: 1440px; // big screens!
-
     /* Effects
     --------------------------------------------------------------------------------------------------------------- */
 
     // transitions
     --transition-basic: 300ms;
 }
+
+/* Breakpoints
+ --------------------------------------------------------------------------------------------------------------- */
+$break-vs: 320px; // old phone
+$break-small: 480px; // modern phone
+$break-small-medium: 600px; // modern larger phone
+$break-medium: 880px; // tablet
+$break-large: 1120px; // laptop
+$break-big: 1240px; // desktop
+$break-vb: 1440px; // big screens!
