banner styles moved to page-sections/banner

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -24,6 +24,9 @@
 @use 'pages/work';
 @use 'pages/team';
 
+//// page-sections
+@use 'page-sections/banner';
+
 //// tools
 @use 'tools/accessibility';
 @use 'tools/utilities';
