--- a/src/sass/partials/header.scss
+++ b/src/sass/partials/header.scss
@@ -52,49 +52,8 @@ header {
             top: 6px;
         }
     }
-}
 
-.banner {
-    width: 100%;
-    padding-top: 4rem;
-    padding-bottom: 5rem;
-    background-color: var(--off-white);
-
-    @media (min-width: 960px) {
-        padding-top: 12.25rem;
-        padding-bottom: 21.8125rem;
+    .scrolled {
+        // styles to go here
     }
-
-    .statement {
-        width: 100%;
-        max-width: 1296px;
-        margin: 0 auto;
-    }
-
-    h1 {
-        font-family: var(--titling);
-        font-size: 1.375rem;
-        font-weight: 500;
-        line-height: 1.375;
-
-        @media (min-width: 320px) {
-            --a: 28;
-            --b: 80;
-            --x: 320;
-            --y: 1120;
-            --sum1: calc((var(--b) - var(--a)) / (var(--y) - var(--x)));
-            --sum2: calc(var(--sum1) * var(--x));
-            --sum3: calc(var(--a) - var(--sum2)) / 16 * 1rem;
-
-            font-size: calc(var(--sum1) * 100vw + (var(--sum3)));
-        }
-
-        @media (min-width: 1120px) {
-            font-size: 5rem;
-        }
-    }
-}
-
-.swap-logo {
-    // styles to go here
 }
