#site-wrapper removed from DOM and layout.scss

--- a/src/sass/tools/utilities.scss
+++ b/src/sass/tools/utilities.scss
@@ -21,7 +21,7 @@
 /* clearfix
 ----------------------------------------------------------------------------- */
 
-// style layouts like it's 2010
+// style it like it's 2008..
 .group:after {
     content: '';
     display: table;
