--- a/src/sass/tools/reset.scss
+++ b/src/sass/tools/reset.scss
@@ -33,14 +33,20 @@ body {
     }
 }
 
-a {
-    text-decoration: none;
+main {
+    position: relative;
+    background: var(--black);
+    z-index: 100;
 }
 
 img {
     display: block;
     max-width: 100%;
     height: auto;
+}
+
+a {
+    text-decoration: none;
 }
 
 ul,
