--- a/src/sass/tools/utilities.scss
+++ b/src/sass/tools/utilities.scss
@@ -6,10 +6,9 @@
 
 // center content with a max-width pf 1440px
 
-// NOTE: DEV WORK ON HOMEPAGE <MAIN> OVERLAY MEANS SITE WIDTH IS TEMPORARILY SWITCHED OFF
 .contain {
     width: 100%;
-    // max-width: var(--site-width);
+    max-width: var(--site-width);
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     margin: 0 auto;
