position:fixed removed from banner, banner offsetHeight and statement intersectObserver commented out

--- a/src/sass/mixins.scss
+++ b/src/sass/mixins.scss
@@ -1,7 +1,6 @@
 /* mixins
 ----------------------------------------------------------------------------- */
-/*
-media queries @mixin mq($query) {
+@mixin mq($query) {
     @media (min-width: $query) {
         @content;
     }
@@ -41,4 +40,3 @@ media queries @mixin mq($query) {
 @mixin shadow {
     box-shadow: $shadow-basic;
 }
-*/
