Basic type switcher set-up, Cabinet Grotesk added to font stack

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -23,6 +23,7 @@
 @use 'pages/archive';
 @use 'pages/work';
 @use 'pages/team';
+@use 'pages/type';
 
 //// page-sections
 @use 'page-sections/banner';
