--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -26,6 +26,8 @@
     --titling: 'qt-optimum';
     --copy: 'satoshi-regular', sans-serif;
 
+    --cabinet: 'cabinet';
+
     // font sizes
     --font-small: 0.875rem;
     --font-root: 1rem;
