Case study custom post type switched to Work

--- a/src/sass/tools/overrides.scss
+++ b/src/sass/tools/overrides.scss
@@ -15,3 +15,12 @@ code {
 .cover {
     object-fit: cover;
 }
+
+.archive,
+.categoty,
+.taxonomy,
+.bbwp_cpt_work-template-default {
+    a {
+        color: white !important;
+    }
+}
