--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -24,6 +24,7 @@
 
     // typefaces
     --titling: 'qt-optimum';
+    --titling: 'cabinet';
     --copy: 'satoshi-regular', sans-serif;
 
     --cabinet: 'cabinet';
