bespoke grid(s) and basic responsive styles added to work page

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -23,7 +23,7 @@
     ------------------------------------------------------------------------------------------------------------ */
 
     // typefaces
-    --titling: 'qt-optimum';
+    // --titling: 'qt-optimum';
     --titling: 'cabinet';
     --copy: 'satoshi-regular', sans-serif;
 
