--- a/src/sass/layout/grids/work-v1.0.scss
+++ b/src/sass/layout/grids/work-v1.0.scss
@@ -1,12 +1,13 @@
 /* grid work-v1.0 : this uses auto-flow: dense to layout loop generated content dynamically
+                  : this also defines the bespoke grids for featured work
 ---------------------------------------------------------------------------------------------------------------------- */
 .grid-work {
     @media (min-width: 600px) {
         display: grid;
         grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: auto;
+        //grid-template-rows: auto;
         gap: 48px;
-        grid-auto-flow: dense;
+        //    grid-auto-flow: dense;
     }
 
     .grid-item {
@@ -58,5 +59,159 @@
     img {
         width: 100%;
         margin-bottom: 1rem;
+    }
+}
+
+// .row-4-4-empty {
+//     display: grid;
+//     grid-template-columns: repeat(12, 1fr);
+// }
+
+.row-4-4-empty,
+.row-8-4,
+.row-empty-8,
+.row-4-tall-empty,
+.row-empty-4-4,
+.row-empty-tall-4,
+.row-8-empty {
+    // @media (min-width: 600px) {
+    @media (min-width: 600px) {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        gap: 48px;
+
+        article {
+            grid-column: 1 / -1;
+        }
+    }
+
+    // for ease, kill at some point
+    article {
+        width: 100%;
+        height: 300px;
+        margin-bottom: 48px;
+        background-color: var(--mid-grey);
+    }
+}
+
+@media (min-width: 768px) {
+    .row-4-4-empty {
+        article {
+            grid-column: auto / span 6;
+        }
+    }
+
+    .row-8-4 {
+        article:nth-of-type(1) {
+            grid-column: auto / span 8;
+        }
+        article:nth-of-type(2) {
+            display: none;
+        }
+    }
+
+    .row-empty-8 {
+        article {
+            grid-column: 5 / -1;
+        }
+    }
+
+    .row-4-tall-empty {
+        article:nth-of-type(1) {
+            grid-column: 1 / 7;
+        }
+
+        article:nth-of-type(2) {
+            height: 600px;
+            grid-column: 7 / 13;
+        }
+    }
+
+    .row-empty-4-4 {
+        article:nth-of-type(1) {
+            grid-column: 1 / 7;
+        }
+
+        article:nth-of-type(2) {
+            grid-column: 7 / 13;
+        }
+    }
+
+    .row-empty-tall-4 {
+        article:nth-of-type(1) {
+            height: 600px;
+            grid-column: 1 / 7;
+        }
+
+        article:nth-of-type(2) {
+            grid-column: 7 / 13;
+        }
+    }
+
+    .row-8-empty {
+        article {
+            grid-column: 1 / 9;
+        }
+    }
+}
+
+@media (min-width: 960px) {
+    .row-4-4-empty {
+        article {
+            grid-column: auto / span 4;
+        }
+    }
+
+    .row-8-4 {
+        article:nth-of-type(1) {
+            grid-column: auto / span 8;
+        }
+        article:nth-of-type(2) {
+            grid-column: auto / span 4;
+        }
+    }
+
+    .row-empty-8 {
+        article {
+            grid-column: 5 / -1;
+        }
+    }
+
+    .row-4-tall-empty {
+        article:nth-of-type(1) {
+            grid-column: 1 / 5;
+        }
+
+        article:nth-of-type(2) {
+            height: 600px;
+            grid-column: 5 / 9;
+        }
+    }
+
+    .row-empty-4-4 {
+        article:nth-of-type(1) {
+            grid-column: 5 / 9;
+        }
+
+        article:nth-of-type(2) {
+            grid-column: 9 / 13;
+        }
+    }
+
+    .row-empty-tall-4 {
+        article:nth-of-type(1) {
+            height: 600px;
+            grid-column: 5 / 9;
+        }
+
+        article:nth-of-type(2) {
+            grid-column: 9 / 13;
+        }
+    }
+
+    .row-8-empty {
+        article {
+            grid-column: 1 / 9;
+        }
     }
 }
