--- a/src/sass/layout/grids/work-v1.0.scss
+++ b/src/sass/layout/grids/work-v1.0.scss
@@ -62,18 +62,20 @@
     }
 }
 
-// .row-4-4-empty {
-//     display: grid;
-//     grid-template-columns: repeat(12, 1fr);
-// }
-
 .row-4-4-empty,
 .row-8-4,
 .row-empty-8,
 .row-4-tall-empty,
 .row-empty-4-4,
 .row-empty-tall-4,
-.row-8-empty {
+.row-8-empty,
+.row-4-8 {
+    margin-bottom: 48px;
+
+    img {
+        width: 100%;
+    }
+
     // @media (min-width: 600px) {
     @media (min-width: 600px) {
         display: grid;
@@ -83,14 +85,6 @@
         article {
             grid-column: 1 / -1;
         }
-    }
-
-    // for ease, kill at some point
-    article {
-        width: 100%;
-        height: 300px;
-        margin-bottom: 48px;
-        background-color: var(--mid-grey);
     }
 }
 
@@ -103,6 +97,7 @@
 
     .row-8-4 {
         article:nth-of-type(1) {
+            height: 700px;
             grid-column: auto / span 8;
         }
         article:nth-of-type(2) {
@@ -139,7 +134,7 @@
 
     .row-empty-tall-4 {
         article:nth-of-type(1) {
-            height: 600px;
+            height: 700px;
             grid-column: 1 / 7;
         }
 
@@ -179,6 +174,7 @@
 
     .row-4-tall-empty {
         article:nth-of-type(1) {
+            height: 700px;
             grid-column: 1 / 5;
         }
 
@@ -200,7 +196,7 @@
 
     .row-empty-tall-4 {
         article:nth-of-type(1) {
-            height: 600px;
+            height: 700px;
             grid-column: 5 / 9;
         }
 
@@ -212,6 +208,17 @@
     .row-8-empty {
         article {
             grid-column: 1 / 9;
+        }
+    }
+
+    .row-4-8 {
+        article:nth-of-type(1) {
+            grid-column: 1 / 5;
+        }
+
+        article:nth-of-type(2) {
+            height: 700px;
+            grid-column: 5 / 13;
         }
     }
 }
