--- a/src/sass/pages/team.scss
+++ b/src/sass/pages/team.scss
@@ -1,6 +1,8 @@
 /* team
 ----------------------------------------------------------------------------- */
 .team {
+    background: var(--off-white);
+
     .page-top {
         margin-bottom: 9.25rem;
         display: flex;
@@ -19,97 +21,37 @@
         }
     }
 
-    .bios {
-        @media (min-width: 800px) {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-gap: 48px;
-        }
+    .team-members {
+        columns: 3;
+        column-gap: 48px;
+    }
 
-        .col-1,
-        .col-2,
-        .col-3 {
-            //width: 33.33%;
-        }
-
-        .col-1 {
-            padding-top: 48px;
-        }
-
-        .col-2 {
-            padding-top: 448px;
-        }
-
-        .team-member {
-            margin-bottom: 3.625rem;
-        }
-
-        figure {
-            margin-bottom: 0.5rem;
-        }
+    .team-member {
+        margin-bottom: 3.375rem;
 
         .image {
             width: 100%;
+            margin-bottom: 0.625rem; //10px
         }
 
-        .details {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: auto;
-        }
-
-        .name,
-        .title {
-            font-size: var(--font-root);
-        }
-
-        .name {
-            grid-column: 1 / 1;
+        h3.name {
             font-family: var(--copy);
-            color: var(--black);
+            font-size: var(--font-root);
+            //   font-weight: bold;
         }
 
-        .title {
-            margin-bottom: var(--drop-small);
-            grid-column: 1 / 1;
+        .role {
+            font-size: var(--font-root-plus);
             text-transform: uppercase;
             color: var(--meta);
         }
+    }
 
-        .bio-reveal {
-            position: relative;
-            width: 38px;
-            height: 38px;
-            border-radius: 100%;
-            grid-column: 2 / -1;
-            grid-row: 1 / span 2;
-            justify-self: end;
-            background-color: var(--meta);
+    .team-member:nth-of-type(4) {
+        padding-bottom: 320px;
+    }
 
-            &:before,
-            &:after {
-                position: absolute;
-                top: calc(50% - 8px);
-                left: calc(50% - 0.5px);
-                width: 1px;
-                height: 16px;
-                content: '';
-                display: block;
-                background-color: var(--white);
-            }
-
-            &:after {
-                transform: rotate(90deg);
-            }
-
-            &:focus {
-                outline: 1px auto -webkit-focus-ring-color;
-            }
-        }
-
-        .bio {
-            font-size: var(--font-root-plus);
-            line-height: 1.175;
-        }
+    .team-member:nth-of-type(5) {
+        padding-top: 320px;
     }
 }
