--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -36,6 +36,8 @@
     --font-title: 1.375rem;
     --font-caption: 1.25rem;
     --font-section: 1.875rem;
+    --font-medium: 2rem;
+    --font-big: 3rem;
 
     // font weights
     --weight-light: 300;
