Basic newsroom partial set up and styled

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -12,6 +12,7 @@
 @use 'partials/header';
 @use 'partials/footer';
 @use 'partials/navigation';
+@use 'partials/newsroom';
 
 //// layout
 @use 'layout/layout';
