--- a/src/sass/partials/footer.scss
+++ b/src/sass/partials/footer.scss
@@ -2,6 +2,7 @@
 ----------------------------------------------------------------------------- */
 footer {
     .footer-main {
+        padding-top: 3rem;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 48px;
@@ -15,6 +16,7 @@ footer {
 
             p {
                 // font-family: var(--copy);
+                margin-top: 1rem;
                 width: 32ch;
                 font-size: var(--font-root-plus);
                 color: var(--work-meta);
