--- a/src/sass/tools/reset.scss
+++ b/src/sass/tools/reset.scss
@@ -28,14 +28,14 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
-    &.home {
-        background: var(--black);
-    }
+    // &.home {
+    //     background: var(--black);
+    // }
 }
 
 main {
     position: relative;
-    background: var(--black);
+    // background: var(--black);
     z-index: 100;
 }
 
