--- a/src/sass/tools/overrides.scss
+++ b/src/sass/tools/overrides.scss
@@ -21,6 +21,6 @@ code {
 .taxonomy,
 .bbwp_cpt_work-template-default {
     a {
-        color: white !important;
+        color: var(--black);
     }
 }
