--- a/src/sass/partials/footer.scss
+++ b/src/sass/partials/footer.scss
@@ -1,7 +1,9 @@
 /* footer
 ----------------------------------------------------------------------------- */
 footer {
+    padding-bottom: 3rem;
     background-color: var(--black);
+
     .footer-main {
         padding-top: 3rem;
         @media (min-width: 1180px) {
