Minor updates and additions - qt-optimum and temporary div triggers removed, temporary scripts added to footer

--- a/src/sass/type/fonts.scss
+++ b/src/sass/type/fonts.scss
@@ -27,6 +27,24 @@
     font-style: normal;
 }
 
+// @font-face {
+//     font-family: 'cabinet-medium';
+//     src: url('../../fonts/cabinet/CabinetGrotesk-Medium.woff2') format('woff2'),
+//         url('../../fonts/cabinet/CabinetGrotesk-Medium.woff') format('woff');
+//     font-weight: 500;
+//     font-display: swap;
+//     font-style: normal;
+// }
+
+@font-face {
+    font-family: 'cabinet-variable';
+    src: url('../../fonts/cabinet/CabinetGrotesk-Variable.woff2') format('woff2'),
+        url('../../fonts/cabinet/CabinetGrotesk-Variable.woff') format('woff');
+    // font-weight: 400;
+    font-display: swap;
+    font-style: normal;
+}
+
 @font-face {
     font-family: 'satoshi-regular';
     src: url('../../fonts/satoshi/Satoshi-Regular.woff2') format('woff2'),
