--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -27,21 +27,17 @@
     --titling: 'cabinet';
     --copy: 'satoshi-regular', sans-serif;
 
-    --cabinet: 'cabinet';
-
     // font sizes
     --font-small: 0.875rem;
     --font-root: 1rem;
     --font-root-plus: 1.125rem;
-    --font-title: 1.375rem;
-    --font-caption: 1.25rem;
-    --font-section: 1.875rem;
     --font-medium: 2rem;
     --font-big: 3rem;
 
     // font weights
     --weight-light: 300;
     --weight-regular: 400;
+    --weight-regular-plus: 500;
     --weight-bold: 700;
     --weight-black: 900;
 
