h3 on archives updated to satoshi and font-size increased to 20px

--- a/src/sass/pages/archives.scss
+++ b/src/sass/pages/archives.scss
@@ -2,14 +2,15 @@
 ----------------------------------------------------------------------------- */
 .page-template-work,
 .archive {
-    .title {
-        font-size: var(--font-title);
+    h3.title {
+        font-family: var(--copy);
+        font-size: 1.25rem;
         font-weight: var(--weight-regular);
         line-height: var(--lh-base);
     }
 
     .link {
-        color: var(--black);
+        //color: var(--black);
     }
 
     .meta {
