--- a/src/sass/layout/grids/home-v1.0.scss
+++ b/src/sass/layout/grids/home-v1.0.scss
@@ -59,17 +59,17 @@
     .client {
         margin-right: 77px;
         margin-bottom: 0.5rem;
-        font-family: var(--titling);
-        font-size: 1.5rem;
-        line-height: 1.232;
+        font-family: var(--copy);
+        font-size: 1.25rem;
+        line-height: 1.35;
         color: var(--white);
     }
 
     .category {
         font-family: var(--copy);
-        font-size: var(--font-root);
+        font-size: var(--font-root-plus);
         text-transform: uppercase;
-        line-height: 1.35;
+        line-height: 1.18;
         color: var(--work-meta);
     }
 
@@ -78,8 +78,13 @@
         margin-bottom: var(--drop-medium);
         font-family: var(--copy);
         font-size: var(--font-root-plus);
-        line-height: 1.35;
+        line-height: 1.18;
         color: var(--work-meta);
+    }
+
+    h2 {
+        margin-bottom: 6rem;
+        font-size: 2.75rem;
     }
 
     // specific row stylings
