--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -12,6 +12,7 @@
     --off-white: #f2f2ee;
     --aqua: #98f9ea;
     --meta: #959595;
+    --mid-black: #4b4b4b;
     --mid-grey: #d9d9d9;
     --dark-grey: #666666;
     --work-meta: #c7c7c7;
@@ -29,8 +30,8 @@
 
     // font sizes
     --font-small: 0.875rem;
-    --font-root: 1rem;
-    --font-root-plus: 1.125rem;
+    --font-base: 1.125rem;
+    --font-base-plus: 1.25rem;
     --font-medium: 2rem;
     --font-big: 3rem;
 
