--- a/src/sass/type/fonts.scss
+++ b/src/sass/type/fonts.scss
@@ -9,14 +9,14 @@
     font-style: normal;
 }
 
-// @font-face {
-//     font-family: 'cabinet-medium';
-//     src: url('../../fonts/cabinet/CabinetGrotesk-Medium.woff2') format('woff2'),
-//         url('../../fonts/cabinet/CabinetGrotesk-Medium.woff') format('woff');
-//     font-weight: 500;
-//     font-display: swap;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'cabinet-medium';
+    src: url('../../fonts/cabinet/CabinetGrotesk-Medium.woff2') format('woff2'),
+        url('../../fonts/cabinet/CabinetGrotesk-Medium.woff') format('woff');
+    font-weight: 500;
+    font-display: swap;
+    font-style: normal;
+}
 
 @font-face {
     font-family: 'cabinet-variable';
