Basic clients component mark-up, calls and styling

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -24,7 +24,7 @@
 @use 'pages/archives';
 @use 'pages/archive';
 @use 'pages/our-work';
-@use 'pages/team';
+@use 'pages/about';
 @use 'pages/type';
 
 //// page-sections
