--- a/src/sass/tools/reset.scss
+++ b/src/sass/tools/reset.scss
@@ -24,6 +24,7 @@ summary {
 body {
     padding-top: 96px;
     font-family: var(--copy);
+    font-size: var(--font-base);
     color: var(--black);
     background: var(--off-white);
     -webkit-font-smoothing: antialiased;
