Who we are, basic service repeater set-up and styled

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -24,6 +24,7 @@
 @use 'pages/archives';
 @use 'pages/archive';
 @use 'pages/our-work';
+@use 'pages/what-we-do';
 @use 'pages/about';
 @use 'pages/type';
 
